apps/homepage/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homepage
  name: homepage
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: homepage
status:
  loadBalancer: {}
