apps/homepage/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
    - websecure-local
  tls: {}
  routes:
  - match: Host(`hp.steffenillium.de`)
    kind: Rule
    services:
    - name: homepage
      port: http
